--- a/project/static/index.html
+++ b/project/static/index.html
@@ -1287,7 +1287,8 @@
                 formData.append('cv_file', cvFile);
                 
                 console.log('Sending request to server...');
-                const response = await fetch('http://localhost:8000/match_cv/', {
+                // deleted http://localhost:8000 for render
+                const response = await fetch('/match_cv/', {
                     method: 'POST',
                     body: formData
                 });
