--- a/project/static/index.html
+++ b/project/static/index.html
@@ -984,7 +984,7 @@
                                 name="offer_text" 
                                 rows="15" 
                                 maxlength="10000" 
-                                placeholder="Pega aquí el texto de la oferta de empleo..." 
+                                placeholder="Paste the offer text here..." 
                                 required
                                 oninput="updateCharCount(this)"
                             ></textarea>
